add loop 1 time animation

--- a/Contra/05-SceneManager.vcxproj.filters
+++ b/Contra/05-SceneManager.vcxproj.filters
@@ -276,6 +276,7 @@
     <ClCompile Include="Game_PlayerBlocker.cpp">
       <Filter>Source Files\Object\MoveObject\Character</Filter>
     </ClCompile>
+    <ClCompile Include="CAnimation_OneLoop.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -596,6 +597,7 @@
     <ClInclude Include="Obj_MovingStone.h">
       <Filter>Source Files\Object\MoveObject\Character</Filter>
     </ClInclude>
+    <ClInclude Include="CAnimation_OneLoop.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
