--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -207,6 +207,7 @@
     <ClCompile Include="Obj_Bullet_R.cpp" />
     <ClCompile Include="Obj_Bullet_S.cpp" />
     <ClCompile Include="Obj_EnemyBullet_N.cpp" />
+    <ClCompile Include="Obj_FallingStone.cpp" />
     <ClCompile Include="Obj_MovingStone.cpp" />
     <ClCompile Include="QuadTree\QuadTree.cpp" />
     <ClCompile Include="QuadTree\SimpleVector.cpp" />
@@ -313,6 +314,7 @@
     <ClInclude Include="Obj_Bullet_R.h" />
     <ClInclude Include="Obj_Bullet_S.h" />
     <ClInclude Include="Obj_EnemyBullet_N.h" />
+    <ClInclude Include="Obj_FallingStone.h" />
     <ClInclude Include="Obj_MovingStone.h" />
     <ClInclude Include="QuadTree\QuadTree.h" />
     <ClInclude Include="QuadTree\SimpleVector.h" />
