--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Enemy_Turret.cpp" />
     <ClCompile Include="Equip_EnemyGun_N.cpp" />
     <ClCompile Include="Equip_EnemyGun_Sniper.cpp" />
+    <ClCompile Include="Equip_EnemyGun_Turret.cpp" />
     <ClCompile Include="Equip_GunBase.cpp" />
     <ClCompile Include="Equip_Gun_F.cpp" />
     <ClCompile Include="Equip_Gun_L.cpp" />
@@ -245,6 +246,8 @@
     <ClCompile Include="State_Station_Hide.cpp" />
     <ClCompile Include="State_Turret_Active.cpp" />
     <ClCompile Include="State_Turret_Base.cpp" />
+    <ClCompile Include="State_Turret_Emerge.cpp" />
+    <ClCompile Include="State_Turret_Hide.cpp" />
     <ClCompile Include="Textures.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Word.cpp" />
@@ -270,6 +273,7 @@
     <ClInclude Include="Enemy_Turret.h" />
     <ClInclude Include="Equip_EnemyGun_N.h" />
     <ClInclude Include="Equip_EnemyGun_Sniper.h" />
+    <ClInclude Include="Equip_EnemyGun_Turret.h" />
     <ClInclude Include="Equip_GunBase.h" />
     <ClInclude Include="Equip_Gun_F.h" />
     <ClInclude Include="Equip_Gun_L.h" />
@@ -358,6 +362,8 @@
     <ClInclude Include="State_Station_Hide.h" />
     <ClInclude Include="State_Turret_Active.h" />
     <ClInclude Include="State_Turret_Base.h" />
+    <ClInclude Include="State_Turret_Emerge.h" />
+    <ClInclude Include="State_Turret_Hide.h" />
     <ClInclude Include="STL_storage.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Textures.h" />
